@@ -1,3 +1,7 @@
+2004-12-07  Bruno Haible  <bruno@clisp.org>
+
+	* array.d (storagevector_store): Rename local variable 'maygc'.
+
 2004-11-29  Bruno Haible  <bruno@clisp.org>
 
 	* describe.lisp (describe-stream): New class.
